seggregated fonts for theme 2017

--- a/reveal/theme-zenika/theme-2017.css
+++ b/reveal/theme-zenika/theme-2017.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Inconsolata';
-  src: url("fonts/Inconsolata/Inconsolata-Regular.ttf") format("truetype");
+  src: url("fonts-2017/Inconsolata/Inconsolata-Regular.ttf") format("truetype");
 }
 
 /*********************************************
@@ -114,7 +114,7 @@ body {
 }
 
 .reveal h1::before {
-  background-image: url('./images/zenia-logo-white-shadow-no-text.png');
+  background-image: url('./images-2017/zenia-logo-white-shadow-no-text.png');
   background-size: cover;
   width: 200px;
   height: 200px;
@@ -194,7 +194,7 @@ body {
 }
 
 .slides section > section:not([class^=page-]) {
-  background-image: url('./images/zenika-triangles-4.png'), url('./images/zenika-logo-red-shadow-no-text.png');
+  background-image: url('./images-2017/zenika-triangles-4.png'), url('./images-2017/zenika-logo-red-shadow-no-text.png');
   background-position: left top, right 5% bottom 5%;
   background-repeat: no-repeat, no-repeat;
   background-size: auto, 100px 100px;
@@ -233,7 +233,7 @@ body {
 }
 
 .reveal section.page-questions {
-  background: white center center no-repeat url('./images/questions.svg');
+  background: white center center no-repeat url('./images-2017/questions.svg');
   background-size: 60%;
 }
 
@@ -244,7 +244,7 @@ body {
   height: 80%;
 }
 .reveal section [class^="page-tp"] {
-  background: white center center no-repeat url('./images/tp.svg');
+  background: white center center no-repeat url('./images-2017/tp.svg');
   background-size: 60%;
 
 }
@@ -351,7 +351,7 @@ body {
 }
 
 .reveal section.page-demo {
-  background: transparent center center no-repeat url('./images/demo.png');
+  background: transparent center center no-repeat url('./images-2017/demo.png');
   background-size: 50%;
 }
 
