--- a/styleCahierExercice.css
+++ b/styleCahierExercice.css
@@ -374,6 +374,9 @@ pre code {
     white-space: pre;
     border: none;
     background: transparent;
+    overflow-x: auto;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .highlight pre {
