:lipstick: Add the red dot after each h2 title

--- a/reveal/theme-zenika/theme-2017.css
+++ b/reveal/theme-zenika/theme-2017.css
@@ -139,6 +139,11 @@ body {
   font-size: 40pt;
 }
 
+.reveal h2::after {
+  content: '.';
+  color: #b51432;
+}
+
 .reveal h2 small,
 .reveal h3 small {
   vertical-align: bottom;
